# Chatbot_platform

./: .gitignore  README.md
chatbot1/api/: .env  instruction.txt  main.py  pyproject.toml  seed.py
chatbot1/api/app/controller/: admin_user_controller.py  api_key_controller.py  auth_controller.py  media_controller.py  resource_controller.py
chatbot1/api/app/models/: media_model.py  resource_chunk_model.py  resource_model.py  user_model.py  widget_install_model.py
chatbot1/api/app/schemas/: api_key_schema.py  auth_schema.py  chat_history_schema.py  chat_schema.py  media_schema.py  resource_schema.py  voice_schema.py  widget_install_schema.py
chatbot1/api/app/seeders/: resource_schema.py
chatbot1/api/app/services/: embedding_service.py  resource_text_service.py  secret_crypto.py
chatbot1/api/app/settings/: cors.py  dbdriver.py
chatbot1/api/database backup/: data1.backup
chatbot1/api/migrations/versions/: 537f4f937d07_create_user_meta_table.py  a1b2c3d4e5f6_create_resources_table.py  e5f6a7b8c9d0_add_api_key_ciphertext_and_widget_installs.py  f6a7b8c9d0e1_create_chat_history_tables.py  fdf405a11b44_create_users_table.py
chatbot1/api/route/: auth_route.py  resource_route.py  user_route.py  widget_install_route.py
chatbot1/ui/: README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
chatbot1/ui/src/: App.tsx  types.ts
ragchatagent/api/migrations/: env.py
ragchatagent/api/route/: admin_route.py  api_key_route.py  chat_history_route.py  chat_route.py  media_route.py  resource_route.py  voice_route.py
ragchatagent/ui/: package-lock.json
(+81 files in other folders)
