[project]
name = "botapi"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.49",
    "alembic>=1.16.0",
    "uvicorn>=0.46.0",
    "bcrypt==4.0.1",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.20",
    "openai>=1.0.0",
    "pgvector>=0.3.6",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "cryptography>=48.0.0",
]
